log/build_2021-03-17_13-38-43/main_package/stderr.log
  File "/home/jordy/ku_turtlebot/install/main_package/lib/python3.8/site-packages/main_package/demo_pub.py", line 19
    self.publisher_int64.publish((int)self.i)
                                      ^
SyntaxError: invalid syntax

